--- a/front-end/index.css
+++ b/front-end/index.css
@@ -158,6 +158,7 @@ table {
   background-color: #FFFFFF;
   margin-top: 20px;
   padding: 10px;
+  border: 1px solid rgb(231, 231, 231); 
   border-radius: 15px;
 }
 
@@ -181,3 +182,16 @@ th, td {
   color: #FFC074;
 }
 
+.title-rank {
+  margin-left: 10px; 
+  color: #FF616D;
+}
+
+.timedown {
+  border: none;
+  font-size: 25px;
+  background: none;
+  color: #FF616D;
+  margin: 5px;
+  padding: 5px 10px;
+}
